2006-03-31  Marek Safar  <marek.safar@seznam.cz>

	* assign.cs (LocalTemporary): Don't require ILGenerator in the resolve
	phase.

	* anonymous.cs, assign.cs, ecore.cs, expression.cs: Updated after
	LocalTemporary change.

	* class.cs (ClassOrStruct.DefineDefaultConstructor): Moved from
	TypeContainer.
	(ClassOrStruct.DefineFieldInitializers): Implemented static field
	initializers optimization.
	(ClassOrStruct.TypeAttr): Moved from modifiers.
	(Constructor.CheckBase): Don't crash when static ctor has parameters.
	(FieldBase.ResolveInitializer): Resolves initializer.
	(FieldBase.HasDefaultInitializer): New property.

	* cs-parser.jay: Removed message.

	* expression.cs (CompilerGeneratedThis): New specialization.

	* modifiers.cs (TypeAttr): Moved to ClassOrStruct.TypeAttr

2006-03-28  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay, cs-tokenizer.cs: On demand Stack allocation.

2006-03-27  Marek Safar  <marek.safar@seznam.cz>

	* ecore.cs (Expression.ResolveAsConstant): Clean up, enum constants should
	be now EnumConstants only.

2006-03-27  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs, driver.cs: Reset more caches.

2006-03-26  Marek Safar  <marek.safar@seznam.cz>

	* cs-tokenizer.cs (adjust_real): Uses float.Parse for float literals.

2006-03-26  Marek Safar  <marek.safar@seznam.cz>

	* constant.cs (Constant.Reduce): Replaced EmitContext with single bool
	for easier reuse. Updated all overrides.
	(IntegralConstant): New base class for all integral constants.
	(IntegralConstant.Error_ValueCannotBeConverted): When assigned value if out
	of the constant range, report custom error.
	(UIntConstant.Reduce): Fixed uint conversion.

	* ecore.cs, literal.cs: Reduce updates.

2006-03-26  Marek Safar  <marek.safar@seznam.cz>

	A fix for #75813.

	* class.cs (Constructor.Define): Removed extra if for default ctors.
	A patch from Atsushi Enomoto.

2006-03-26  Marek Safar  <marek.safar@seznam.cz>
